# AI-Assignment-Document-classifier

./: README.md  advanced_document_classifier.py  initial_document_classifier.py  main.py  pyproject.toml
