[project]
name = "classifier-assignment"
version = "0.1.0"
description = "Classifier"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
   "fastapi>=0.115.12",
   "python-multipart>=0.0.20",
   "uvicorn>=0.34.2",
   "PyMuPDF>=1.23.4",
   "opencv-python>=4.8.0",
   "numpy>=1.24.0"
]

[dependency-groups]
dev = [
    "ruff>=0.11.5",
]